--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -40,7 +40,6 @@
   height: 300px;
 }
 
-
 .vip {
   width: 150px;
   height: 150px;
@@ -52,7 +51,6 @@
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
-
 }
 
 .vip img:hover {
@@ -64,7 +62,26 @@
   padding: 30px;
 }
 
-.vb img {
-  width:100%;
-  padding: 10% 0;
+.vb {
+  text-align: center;
+  text-transform: capitalize;
+  font-family: 'Condiment', cursive;
+  clear: both;
+  color: black;
+  background: linear-gradient(#f72424, #ffffff, #27e461);
+}
+
+.anim {
+ width: 250px;
+ margin: 0 auto;
+  animation: ani 5s linear infinite;
+}
+
+@keyframes ani {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
